avoid submit button being strange on safari mobile

--- a/style.scss
+++ b/style.scss
@@ -3,19 +3,6 @@
 
 $yellow: yellow;
 
-::selection {
-  color: #000;
-  background: yellow;
-}
-::-moz-selection {
-  color: #000;
-  background: yellow;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 body {
   padding: 0;
   margin: 0;
